--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -54,7 +54,7 @@ jobs:
         WITH_COVERAGE: true
         DISABLE_SPRING: 1
       run: |
-        bundle exec db:prepare
+        bundle exec rails db:prepare
         bundle exec rake test
         
     - name: Upload Code Coverage
