--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,6 +14,11 @@ on:
     branches: [ master ]
 
 
+env:
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_DB: postgres
+
 jobs:
   rspec-test:
 
@@ -21,10 +26,12 @@ jobs:
     
     services:
       postgres:
-        image: postgres:12
-        ports: ["5432:5432"]
+        image: postgres:latest
+        ports:
+        - 5432:5432
         env:
-          POSTGRES_PASSWORD: password
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
         options: >-
           --health-cmd pg_isready 
           --health-interval 10s 
@@ -46,22 +53,12 @@ jobs:
       run: |
         sudo apt-get -yqq install libpq-dev
         
-    - name: Connect to PostgreSQL
-        # Runs a script that creates a PostgreSQL table, populates
-        # the table with data, and then retrieves the data.
-      run: node client.js
-        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
-      env:
-          # The hostname used to communicate with the PostgreSQL service container
-          POSTGRES_HOST: postgres
-          # The default PostgreSQL port
-          POSTGRES_PORT: 5432
-        
-    - name: Run Tests
- 
+    - name: Create database
       run: |
-        bundle exec rails db:prepare
-        bundle exec rake test
+          bundler exec rails db:create RAILS_ENV=test
+          bundler exec rails db:migrate RAILS_ENV=test
+    - name: Run tests
+      run: bundler exec rake
         
     - name: Upload Code Coverage
       uses: actions/upload-artifact@v2
