--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,7 +51,8 @@ jobs:
         
     - name: Install PostgreSQL 12 client
       run: |
-        sudo apt-get -yqq install libpq-dev
+        sudo apt-get install postgresql libpq-dev
+        sudo service postgresql start
         
     - name: Create database
       run: |
