--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: localhost
+  username: postgres
   database: my_database_test
+  # database: <%= ENV.fetch('PG_DATABASE', 'my_database_test') %> 
+  # host:     <%= ENV.fetch('PG_HOST',  'localhost') %>
+  # port:     <%= ENV.fetch('PG_PORT', 5432) %>
 
 production:
   <<: *default
