--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -51,6 +51,21 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.0.1
+        
+    - name: Install node and dependencies
+      run: |
+        curl -sL https://deb.nodesource.com/setup_12.x | bash -
+        apt-get update -yq
+        apt-get -o dir::cache::archives="$APT_CACHE_DIR" install -y apt-transport-https build-essential cmake nodejs software-properties-common unzip
+
+    - name: Install yarn
+      run: |
+        wget -q -O - https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+        echo "deb https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list
+        apt-get update -yq
+        apt-get -o dir::cache::archives="$APT_CACHE_DIR" install -y yarn
+        yarn install
+      
     # required to compile pg ruby gem
     - name: Install PostgreSQL client
       run: sudo apt-get install libpq-dev
