--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -53,11 +53,10 @@ jobs:
         ruby-version: 3.0.1
         
     - name: Set up node
-    - uses: actions/setup-node@v2
+      uses: actions/setup-node@v2
       with:
         node-version: '14'
         check-latest: true
-    - run: npm install
 
     - name: Install yarn
       run: |
