--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -47,16 +47,16 @@ jobs:
       with:
         access_token: ${{ github.token }}
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+        check-latest: true
+        
     - name: Set up Ruby 
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.0.1
-        
-    - name: Set up node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-        check-latest: true
+      
 
     - name: Install yarn
       run: |
