--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         node-version: '14'
         check-latest: true
+    - uses: borales/actions-yarn@v2.0.0
         
     - name: Set up Ruby 
       uses: ruby/setup-ruby@v1
