--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -89,7 +89,13 @@ jobs:
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
         bin/rails db:setup
-        bundle exec rails webpacker:compile
+        
+    - name: Webpacker 
+      run: |
+        yarn add @rails/webpacker
+        bundle update webpacker
+
+
         
     - name: Run tests
       env:
